Made artifact backwards compatible with java 8 but retaining module-system